fix h1 z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -226,6 +226,7 @@ h6 {
 
 h1 {
   font-size: 6rem;
+  z-index: 1;
 }
 h1 .name {
   color: #00ffb8;
